--- a/CSS/Can I Use/index.html
+++ b/CSS/Can I Use/index.html
@@ -64,65 +64,63 @@
                         <li>Opera Mobile</li>
                         <li>Chrome for Android</li>
                     </ul>
-                    <div class="boxes">
-                        <ul>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="yellow_boxes"><span>2</span>12-14</li>
-                            <li class="red_boxes">2-5</li>
-                            <li class="red_boxes">4-20</li>
-                            <li class="red_boxes">3.1-7</li>
-                            <li class="red_boxes">10-12.1</li>
-                            <li class="red_boxes">3.2-6.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="green_boxes"><span>2 3</span>15-18</li>
-                            <li class="yellow_boxes">6-53</li>
-                            <li class="yellow_boxes">21-50</li>
-                            <li class="yellow_boxes">7.1-9.1</li>
-                            <li class="yellow_boxes">15-37</li>
-                            <li class="yellow_boxes">7-9.3</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="red_boxes">2.1-4.3</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="red_boxes">6-10</li>
-                            <li class="green_boxes"><span>2</span>79-96</li>
-                            <li class="green_boxes"><span>2</span>54-95</li>
-                            <li class="green_boxes"><span>2</span>51-96</li>
-                            <li class="green_boxes">10-15.1</li>
-                            <li class="green_boxes"><span>2</span>38-81</li>
-                            <li class="green_boxes">10-15.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="yellow_boxes">4.4-4.4.4</li>
-                            <li class="red_boxes">12-12.1</li>
-                            <li class="blank_boxes">10-12.1</li>
-                            <li class="yellow_boxes"><span>1 2</span>11</li>
-                            <li class="green_boxes"><span>2</span>97</li>
-                            <li class="green_boxes"><span>2</span>96</li>
-                            <li class="green_boxes"><span>2</span>97</li>
-                            <li class="green_boxes">15.2</li>
-                            <li class="green_boxes"><span>2</span>82</li>
-                            <li class="green_boxes">15.2</li>
-                            <li class="red_boxes">all</li>
-                            <li class="green_boxes"><span>2</span>96</li>
-                            <li class="green_boxes"><span>2</span>64</li>
-                            <li class="green_boxes"><span>2</span>96</li>
-                            <li class="blank_boxes">1111</li>
-                            <li class="blank_boxes">97</li>
-                            <li class="green_boxes"><span>2</span>97-98</li>
-                            <li class="green_boxes"><span>2</span>98-100</li>
-                            <li class="green_boxes">TP</li>
-                            <li class="blank_boxes">82</li>
-                            <li class="blank_boxes">15.2</li>
-                            <li class="blank_boxes">all</li>
-                            <li class="blank_boxes">96</li>
-                            <li class="blank_boxes">64</li>
-                            <li class="blank_boxes">96</li>
-                        </ul>
-                    </div>
+                    <ul class="boxes">
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="yellow_boxes"><span>2</span>12-14</li>
+                        <li class="red_boxes">2-5</li>
+                        <li class="red_boxes">4-20</li>
+                        <li class="red_boxes">3.1-7</li>
+                        <li class="red_boxes">10-12.1</li>
+                        <li class="red_boxes">3.2-6.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="green_boxes"><span>2 3</span>15-18</li>
+                        <li class="yellow_boxes">6-53</li>
+                        <li class="yellow_boxes">21-50</li>
+                        <li class="yellow_boxes">7.1-9.1</li>
+                        <li class="yellow_boxes">15-37</li>
+                        <li class="yellow_boxes">7-9.3</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="red_boxes">2.1-4.3</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="red_boxes">6-10</li>
+                        <li class="green_boxes"><span>2</span>79-96</li>
+                        <li class="green_boxes"><span>2</span>54-95</li>
+                        <li class="green_boxes"><span>2</span>51-96</li>
+                        <li class="green_boxes">10-15.1</li>
+                        <li class="green_boxes"><span>2</span>38-81</li>
+                        <li class="green_boxes">10-15.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="yellow_boxes">4.4-4.4.4</li>
+                        <li class="red_boxes">12-12.1</li>
+                        <li class="blank_boxes">10-12.1</li>
+                        <li class="yellow_boxes"><span>1 2</span>11</li>
+                        <li class="green_boxes"><span>2</span>97</li>
+                        <li class="green_boxes"><span>2</span>96</li>
+                        <li class="green_boxes"><span>2</span>97</li>
+                        <li class="green_boxes">15.2</li>
+                        <li class="green_boxes"><span>2</span>82</li>
+                        <li class="green_boxes">15.2</li>
+                        <li class="red_boxes">all</li>
+                        <li class="green_boxes"><span>2</span>96</li>
+                        <li class="green_boxes"><span>2</span>64</li>
+                        <li class="green_boxes"><span>2</span>96</li>
+                        <li class="blank_boxes">1111</li>
+                        <li class="blank_boxes">97</li>
+                        <li class="green_boxes"><span>2</span>97-98</li>
+                        <li class="green_boxes"><span>2</span>98-100</li>
+                        <li class="green_boxes">TP</li>
+                        <li class="blank_boxes">82</li>
+                        <li class="blank_boxes">15.2</li>
+                        <li class="blank_boxes">all</li>
+                        <li class="blank_boxes">96</li>
+                        <li class="blank_boxes">64</li>
+                        <li class="blank_boxes">96</li>
+                    </ul>
                 </div>
             </main>
         </div>
